feat(client): add client
