# docs/openapi.yaml
@@ -53,6 +53,37 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserError'
+  /auth/client:
+    post:
+      tags:
+        - auth
+      description: >-
+        This is similar to /auth/request, but the user token/policy is not used,
+        instead the Client ID is the only identity checked.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRequestBody'
+      responses:
+        200:
+          description: >-
+            Arborist successfully returned an authorization decision. NOTE
+            that a 200 status DOES NOT indicate authorization, only that the
+            input was valid. The `"auth"` field in the response indicates
+            authorization.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthRequestResponse'
+        400:
+          description: >-
+            The input was somehow invalid; for example, a given resource does
+            not exist.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserError'
   /auth/resources:
     post:
       tags:
@@ -630,6 +661,126 @@ paths:
           description: successfully revoked
         404:
           description: user not found
+  /client:
+    get:
+      tags:
+        - client
+      description: >-
+        List all the clients registered in arborist.
+      responses:
+        200:
+          description: list of clients
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientsList'
+    post:
+      tags:
+        - client
+      description: >-
+        Create a new client
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Client'
+      responses:
+        201:
+          description: created client
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  created:
+                    $ref: '#/components/schemas/Client'
+  /client/{clientID}:
+    parameters:
+      - in: path
+        name: clientID
+        required: true
+        schema:
+          type: string
+        description: the client ID for a client registered in arborist
+    get:
+      tags:
+        - client
+      description: >-
+        Read the information for a specific client.
+      responses:
+        200:
+          description: client information
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Client'
+        404:
+          description: client not found
+    delete:
+      tags:
+        - client
+      description: >-
+        Delete this client from the database.
+      responses:
+        204:
+          description: client successfully deleted
+        404:
+          description: client not found
+  /client/{clientID}/policy:
+    parameters:
+      - in: path
+        name: clientID
+        required: true
+        schema:
+          type: string
+        description: the client ID for a client registered in arborist
+    post:
+      tags:
+        - client
+      description: >-
+        Grant an additional policy to a client. The policy must exist already.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Policy'
+      responses:
+        204:
+          description: successfully granted additional policy
+        404:
+          description: client not found, or policy not found
+    delete:
+      tags:
+        - client
+      description: >-
+        Revoke all policies for this client.
+      responses:
+        204:
+          description: successfully revoked policies
+  /client/{clientID}/policy/{policyName}:
+    parameters:
+      - in: path
+        name: clientID
+        required: true
+        schema:
+          type: string
+        description: the client ID for a client registered in arborist
+      - in: path
+        name: policyName
+        required: true
+        schema:
+          type: string
+        description: the name for a policy
+    delete:
+      tags:
+        - client
+      description: >-
+        Revoke this policy from this client, so they will no longer have access.
+      responses:
+        204:
+          description: successfully revoked
+        404:
+          description: client not found
   /group:
     get:
       tags:
@@ -999,6 +1150,25 @@ components:
           items:
             type: string
             example: 'username'
+    Client:
+      type: object
+      properties:
+        clientID:
+          type: string
+          example: 'x68GTbL0NHOV085t51jEuJW3vDrng3G5hr7p1B4l'
+        policies:
+          type: array
+          items:
+            type: string
+            example: 'policy'
+    ClientsList:
+      type: object
+      properties:
+        clients:
+          type: array
+          items:
+            type: string
+            example: 'x68GTbL0NHOV085t51jEuJW3vDrng3G5hr7p1B4l'
     Group:
       type: object
       properties:
